--- a/src/l0/Flow.Domain.Patterns.UnitTests/Flow.Domain.Patterns.UnitTests.csproj
+++ b/src/l0/Flow.Domain.Patterns.UnitTests/Flow.Domain.Patterns.UnitTests.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+	  <Nullable>enable</Nullable>
+	  <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
+    <ProjectReference Include="..\Flow.Domain.Patterns\Flow.Domain.Patterns.csproj" />
   </ItemGroup>
 
 </Project>
