--- a/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
+++ b/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Flow.Domain.Patterns\Flow.Domain.Patterns.csproj" />
+  </ItemGroup>
+
 </Project>
