--- a/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
+++ b/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="27.1.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
