--- a/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
+++ b/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="FluentValidation" Version="10.3.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
   </ItemGroup>
