--- a/src/l2/Flow.Infrastructure.Storage/Flow.Infrastructure.Storage.csproj
+++ b/src/l2/Flow.Infrastructure.Storage/Flow.Infrastructure.Storage.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.11" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
   </ItemGroup>
