--- a/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/appsettings.json
+++ b/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/appsettings.json
@@ -3,7 +3,8 @@
     "ConnectionString": "",
     "CultureCode": "ru-RU",
     "Editor": {
-      "JSON": "code"
+      "JSON": "code",
+      "CSV": "C:\\Program Files\\Microsoft Office\\root\\Office16\\EXCEL.EXE"
     } 
   } 
 }
