cli tweaks: text output, command names  etc..

--- a/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Properties/launchSettings.json
+++ b/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Properties/launchSettings.json
@@ -1,5 +1,12 @@
 {
   "profiles": {
-    
+    "flow add": {
+      "commandName": "Project",
+      "commandLineArgs": "add -e -i C:\\Users\\nvsnk\\Downloads\\account_statements_202111082140.csv"
+    },
+    "flow list all": {
+      "commandName": "Project",
+      "commandLineArgs": "k>0"
+    }
   }
 }
