--- a/src/l1/Flow.Application.ExchangeRates/Flow.Application.ExchangeRates.csproj
+++ b/src/l1/Flow.Application.ExchangeRates/Flow.Application.ExchangeRates.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\l0\FLow.Domain.ExchangeRates\FLow.Domain.ExchangeRates.csproj" />
   </ItemGroup>
 
