--- a/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
+++ b/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\l0\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
+    <ProjectReference Include="..\Flow.Application.ExchangeRates\Flow.Application.ExchangeRates.csproj" />
   </ItemGroup>
 
 </Project>
