Introduced Domain.Common

--- a/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
+++ b/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Flow.Domain.Common\Flow.Domain.Common.csproj" />
     <ProjectReference Include="..\Flow.Domain.Patterns\Flow.Domain.Patterns.csproj" />
   </ItemGroup>
 
