--- a/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Flow.Hosts.Accountant.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Flow.Hosts.Accountant.Cli.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
+    <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Rates.CBRF\Flow.Infrastructure.Rates.CBRF.csproj" />
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Storage\Flow.Infrastructure.Storage.csproj" />
   </ItemGroup>
 
