--- a/src/l0/FLow.Domain.ExchangeRates/FLow.Domain.ExchangeRates.csproj
+++ b/src/l0/FLow.Domain.ExchangeRates/FLow.Domain.ExchangeRates.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Flow.Domain.Common\Flow.Domain.Common.csproj" />
+  </ItemGroup>
+
 </Project>
