--- a/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.0-preview1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
   </ItemGroup>
 
