--- a/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
@@ -14,4 +14,13 @@
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
