--- a/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
@@ -5,7 +5,20 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyName>transfers</AssemblyName>
+    <Version>0.0.1</Version>
+    <Authors>nvsnkv</Authors>
+    <Company>nvsnkv</Company>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\Flow.Hosts.Common\appsettings.json" Link="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
