--- a/src/l1/Flow.Application.Transactions.UnitTests/Flow.Application.Transactions.UnitTests.csproj
+++ b/src/l1/Flow.Application.Transactions.UnitTests/Flow.Application.Transactions.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.categories" Version="2.0.5" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
