--- a/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
+++ b/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="CsvHelper" Version="27.2.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
