--- a/src/l1/Flow.Application.Analysis.UnitTests/Flow.Application.Analysis.UnitTests.csproj
+++ b/src/l1/Flow.Application.Analysis.UnitTests/Flow.Application.Analysis.UnitTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="System.Linq.Async" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.categories" Version="2.0.5" />
