--- a/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
+++ b/src/l2/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\..\l0\Flow.Domain.ExchangeRates\Flow.Domain.ExchangeRates.csproj" />
     <ProjectReference Include="..\..\l0\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
     <ProjectReference Include="..\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
+    <ProjectReference Include="..\..\l0\Flow.Domain.Analysis\Flow.Domain.Analysis.csproj" />
   </ItemGroup>
 
 </Project>
