--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ obj
 /.vs
 /src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Flow.Hosts.Accountant.Cli.csproj.user
 /src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Properties/launchSettings.json
+/docs/samples/aggregation_rules.csv
+/src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Flow.Hosts.Analysis.Cli.csproj.user
