updated flow bundling

--- a/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
+++ b/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>flow-bundle-registator</AssemblyName>
+    <AssemblyName>flow-bundle</AssemblyName>
     <Version>0.0.1</Version>
     <Authors>nvsnkv</Authors>
   </PropertyGroup>
