--- a/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
@@ -12,8 +12,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json" />
+	<None Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		<CopyToPublishDirectory>Never</CopyToPublishDirectory>
+	</None>
     <Content Include="..\Flow.Hosts.Common\appsettings.json" Link="appsettings.json" />
+
   </ItemGroup>
 
   <ItemGroup>
