--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ obj
 /docs/samples/aggregation_rules.csv
 /src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Flow.Hosts.Analysis.Cli.csproj.user
 /build
+/src/l3/CommandLine/CommandLine.Bundle/Properties/PublishProfiles/build-cli-bundle-win64.pubxml.user
