--- a/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <None Update="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
