--- a/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
@@ -12,9 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
+	<None Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+	  <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+    </None>
     <Content Include="..\Flow.Hosts.Common\appsettings.json" Link="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
