--- a/src/l0/Flow.Domain.Patterns/Flow.Domain.Patterns.csproj
+++ b/src/l0/Flow.Domain.Patterns/Flow.Domain.Patterns.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
+	<Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Logical\" />
-  </ItemGroup>
 
 </Project>
