--- a/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
+++ b/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
+	<Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
+	<Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
