--- a/src/l2/Flow.Infrastructure.Configuration/Flow.Infrastructure.Configuration.csproj
+++ b/src/l2/Flow.Infrastructure.Configuration/Flow.Infrastructure.Configuration.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
