--- a/src/l2/Flow.Infrastructure.Storage.Migrations/Flow.Infrastructure.Storage.Migrations.csproj
+++ b/src/l2/Flow.Infrastructure.Storage.Migrations/Flow.Infrastructure.Storage.Migrations.csproj
@@ -16,6 +16,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
 </Project>
