--- a/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
+++ b/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
@@ -6,8 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow-bundle</AssemblyName>
-    <Version>0.0.1</Version>
+    <Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
