--- a/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
