--- a/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
@@ -6,9 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>rates</AssemblyName>
-    <Version>0.0.1</Version>
-    <Company>nvsnkv</Company>
+    <Version>2.0.0</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
