--- a/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
+++ b/src/l1/Flow.Application.Transactions/Flow.Application.Transactions.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Autofac" Version="6.3.0" />
     <PackageReference Include="FluentValidation" Version="10.3.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="System.Linq.Async" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
