--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ obj
 /src/l3/CommandLine/CommandLine.Bundle/Properties/PublishProfiles/build-cli-bundle-win64.pubxml.user
 launchSettings.json
 appsettings.Development.json
+/src/l3/CommandLine/CommandLine.Bundle/Properties/PublishProfiles/FolderProfile.pubxml.user
