--- a/src/l2/Flow.Infrastructure.Storage/Flow.Infrastructure.Storage.csproj
+++ b/src/l2/Flow.Infrastructure.Storage/Flow.Infrastructure.Storage.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
   </ItemGroup>
 
