accountant -> flow-tx

--- a/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
+++ b/src/l3/CommandLine/CommandLine.Bundle/CommandLine.Bundle.csproj
@@ -13,15 +13,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flow.Hosts.Accountant.Cli\Flow.Hosts.Accountant.Cli.csproj">
-      <CopyLocal>True</CopyLocal>
-    </ProjectReference>
     <ProjectReference Include="..\Flow.Hosts.Analysis.Cli\Flow.Hosts.Analysis.Cli.csproj">
       <CopyLocal>True</CopyLocal>
     </ProjectReference>
     <ProjectReference Include="..\Flow.Hosts.Common\Flow.Hosts.Common.csproj" />
     <ProjectReference Include="..\Flow.Hosts.ExchangeRates.Cli\Flow.Hosts.ExchangeRates.Cli.csproj">
       <CopyLocal>True</CopyLocal>
+    </ProjectReference>
+    <ProjectReference Include="..\Flow.Hosts.Transactions.Cli\Flow.Hosts.Transactions.Cli.csproj">
+      <Private>True</Private>
     </ProjectReference>
     <ProjectReference Include="..\Flow.Hosts.Transfers.Cli\Flow.Hosts.Transfers.Cli.csproj">
       <CopyLocal>True</CopyLocal>
