--- a/src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Flow.Hosts.Analysis.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Flow.Hosts.Analysis.Cli.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>flow</AssemblyName>
+    <AssemblyName>flow-core</AssemblyName>
     <Version>3.0.2</Version>
 	<AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
