--- a/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
@@ -20,4 +20,8 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
+  </ItemGroup>
+
 </Project>
