--- a/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyName>flow-xfrs</AssemblyName>
+    <AssemblyName>flow-xfers</AssemblyName>
     <Version>2.2.1</Version>
 	<AssemblyVersion>2.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
