--- a/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
@@ -5,11 +5,11 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>2.0.1</Version>
+	<Version>2.0.2</Version>
 	<AssemblyVersion>2.0.0.0</AssemblyVersion>
 	<Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
-    <AssemblyName>accountant</AssemblyName>
+    <AssemblyName>flow-tx</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
