--- a/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,7 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow</AssemblyName>
-    <Version>3.3.1</Version>
+    <Version>3.3.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
