--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,10 @@ obj
 /src/.vs
 /src/.env
 /.vs
-/src/l3/CommandLine/Flow.Hosts.Accountant.Cli/Flow.Hosts.Accountant.Cli.csproj.user
 /src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Properties/launchSettings.json
 /docs/samples/aggregation_rules.csv
-/src/l3/CommandLine/Flow.Hosts.Analysis.Cli/Flow.Hosts.Analysis.Cli.csproj.user
 /build
-/src/l3/CommandLine/CommandLine.Bundle/Properties/PublishProfiles/build-cli-bundle-win64.pubxml.user
 launchSettings.json
 appsettings.Development.json
-/src/l3/CommandLine/CommandLine.Bundle/Properties/PublishProfiles/FolderProfile.pubxml.user
-/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Properties/PublishProfiles/FolderProfile.pubxml.user
+*.pubxml.user
+*.csproj.user
