--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ launchSettings.json
 appsettings.Development.json
 *.pubxml.user
 *.csproj.user
+/src/plugins/transactions/Flow.Plugins.Transactions.TKF/.vs
