--- a/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+	  <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
 
   <ItemGroup>
