--- a/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.EntryPoint.Cli/Flow.Hosts.EntryPoint.Cli.csproj
@@ -6,7 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow</AssemblyName>
-    <Version>3.4.0</Version>
+    <Version>4.0.0</Version>
+    <AssemblyVersion>4.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
