--- a/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Nuget.Config
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Nuget.Config
@@ -1,5 +1,6 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 	<packageSources>
-		<add key="flow plugin deps" value="../../../../build/plugins-deps" />
+		<add key="flow plugin deps" value="../../../../build/plugin-deps" />
 	</packageSources>
 </configuration>
