--- a/src/l0/Flow.Domain.Common/Flow.Domain.Common.csproj
+++ b/src/l0/Flow.Domain.Common/Flow.Domain.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <Version>3.0.0</Version>
 	<AssemblyVersion>3.0.0.0</AssemblyVersion>
+	<Authors>nvsnkv</Authors>
+	<Description>Basic domain-level utilities for Flow solution</Description>
+	<Copyright>© 2021 nvsnkv</Copyright>
+	<PackageProjectUrl>https://github.com/nvsnkv/flow2</PackageProjectUrl>
   </PropertyGroup>
 
 </Project>
