--- a/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
+++ b/src/l0/Flow.Domain.Transactions/Flow.Domain.Transactions.csproj
@@ -7,6 +7,8 @@
 	<AssemblyVersion>3.0.0.0</AssemblyVersion>
 	<Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
+	<Description>Transations domain objects for Flow solution</Description>
+	<PackageProjectUrl>https://github.com/nvsnkv/flow2</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
