--- a/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Flow.Infrastructure.Plugins.Transactions.Contract" Version="2.1.0"/>
+    <PackageReference Include="Flow.Domain.Common" Version="3.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Flow.Domain.Patterns" Version="3.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Flow.Domain.Transactions" Version="3.0.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Flow.Infrastructure.Plugins.Transactions.Contract" Version="2.1.0" ExcludeAssets="runtime" />
   </ItemGroup>
 
 </Project>
