--- a/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
@@ -5,7 +5,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>3.0.0</Version>
+	<Version>3.1.0</Version>
 	<AssemblyVersion>3.0.0.0</AssemblyVersion>
 	<Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
@@ -30,6 +30,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
+    <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Plugins.Transactions.Loader\Flow.Infrastructure.Plugins.Transactions.Loader.csproj" />
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Rates.CBRF\Flow.Infrastructure.Rates.CBRF.csproj" />
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Storage\Flow.Infrastructure.Storage.csproj" />
     <ProjectReference Include="..\Flow.Hosts.Common\Flow.Hosts.Common.csproj" />
