--- a/src/l2/Flow.Infrastructure.Plugins.Transactions.Loader/Flow.Infrastructure.Plugins.Transactions.Loader.csproj
+++ b/src/l2/Flow.Infrastructure.Plugins.Transactions.Loader/Flow.Infrastructure.Plugins.Transactions.Loader.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Version>2.0.0</Version>
+	<Version>2.0.1</Version>
+	<AssemblyVersion>2.0.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
