--- a/src/l2/Flow.Infrastructure.Plugins.Transactions.Contract/Flow.Infrastructure.Plugins.Transactions.Contract.csproj
+++ b/src/l2/Flow.Infrastructure.Plugins.Transactions.Contract/Flow.Infrastructure.Plugins.Transactions.Contract.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\l0\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
+    <ProjectReference Include="..\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
