--- a/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.TKF/Flow.Plugins.Transactions.TKF.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="Flow.Domain.Common" Version="3.0.0" ExcludeAssets="runtime" />
     <PackageReference Include="Flow.Domain.Patterns" Version="3.0.0" ExcludeAssets="runtime" />
     <PackageReference Include="Flow.Domain.Transactions" Version="3.0.1" ExcludeAssets="runtime" />
-    <PackageReference Include="Flow.Infrastructure.Plugins.Transactions.Contract" Version="2.1.1" ExcludeAssets="runtime" />
+    <PackageReference Include="Flow.Infrastructure.Plugins.Transactions.Contract" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
