--- a/src/l2/IO/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO/Flow.Infrastructure.IO.csproj
@@ -11,10 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +19,7 @@
     <ProjectReference Include="..\..\..\l0\Flow.Domain.ExchangeRates\Flow.Domain.ExchangeRates.csproj" />
     <ProjectReference Include="..\..\..\l0\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
     <ProjectReference Include="..\..\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
+    <ProjectReference Include="..\Flow.Infrastructure.IO.Generics\Flow.Infrastructure.IO.Generics.csproj" />
   </ItemGroup>
 
 </Project>
