chore:  marked old IO as obsolete

--- a/src/l2/IO/Flow.Infrastructure.IO.Obsolete/Flow.Infrastructure.IO.Obsolete.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Obsolete/Flow.Infrastructure.IO.Obsolete.csproj
@@ -8,6 +8,7 @@
 	<AssemblyVersion>4.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
+	<RootNamespace>Flow.Infrastructure.IO</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
