--- a/src/l2/IO/Flow.Infrastructure.IO.UnitTests/Flow.Infrastructure.IO.UnitTests.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.UnitTests/Flow.Infrastructure.IO.UnitTests.csproj
@@ -23,7 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
+    <ProjectReference Include="..\Flow.Infrastructure.IO.Obsolete\Flow.Infrastructure.IO.Obsolete.csproj" />
   </ItemGroup>
 
 </Project>
