--- a/src/l2/Flow.Infrastructure.Plugins.Transactions.Loader/Flow.Infrastructure.Plugins.Transactions.Loader.csproj
+++ b/src/l2/Flow.Infrastructure.Plugins.Transactions.Loader/Flow.Infrastructure.Plugins.Transactions.Loader.csproj
@@ -16,7 +16,7 @@
     <ProjectReference Include="..\..\l1\Flow.Application.Transactions\Flow.Application.Transactions.csproj" />
     <ProjectReference Include="..\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
     <ProjectReference Include="..\Flow.Infrastructure.Plugins.Transactions.Contract\Flow.Infrastructure.Plugins.Transactions.Contract.csproj" />
-    <ProjectReference Include="..\IO\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
+    <ProjectReference Include="..\IO\Flow.Infrastructure.IO.Obsolete\Flow.Infrastructure.IO.Obsolete.csproj" />
   </ItemGroup>
 
 </Project>
