fix:  fixed plugin

--- a/src/l2/IO/Flow.Infrastructure.IO.Contract/Flow.Infrastructure.IO.Contract.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Contract/Flow.Infrastructure.IO.Contract.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Copyright>(c) nvsnkv 2023</Copyright>
+        <AssemblyVersion>1.0.0.0</AssemblyVersion>
     </PropertyGroup>
 
 </Project>
