--- a/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader.csproj
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="CsvHelper" Version="30.0.1" />
       <PackageReference Include="Flow.Infrastructure.Plugins.Contract" Version="3.0.0" />
+      <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
       <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
