--- a/src/l2/IO/Flow.Infrastructure.IO.Calendar/Flow.Infrastructure.IO.Calendar.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Calendar/Flow.Infrastructure.IO.Calendar.csproj
@@ -4,6 +4,10 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Version>1.0.0</Version>
+	      <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <Authors>nvsnkv</Authors>
+        <Copyright>© 2023 nvsnkv</Copyright>
     </PropertyGroup>
 
     <ItemGroup>
