feat:  debugger fix: CI

--- a/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
@@ -13,6 +13,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Plugins.Loader\Flow.Infrastructure.Plugins.Loader.csproj" />
+    <ProjectReference Include="..\..\..\l2\IO\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
     <ProjectReference Include="..\Flow.Hosts.Common\Flow.Hosts.Common.csproj" />
   </ItemGroup>
 
