fixes here and there

--- a/src/l2/IO/Flow.Infrastructure.IO.CSV/Flow.Infrastructure.IO.CSV.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.CSV/Flow.Infrastructure.IO.CSV.csproj
@@ -16,6 +16,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\..\l0\Flow.Domain.ExchangeRates\Flow.Domain.ExchangeRates.csproj" />
       <ProjectReference Include="..\..\..\l0\Flow.Domain.Transactions\Flow.Domain.Transactions.csproj" />
+      <ProjectReference Include="..\..\..\l1\Flow.Application.Transactions.Contract\Flow.Application.Transactions.Contract.csproj" />
       <ProjectReference Include="..\..\Flow.Infrastructure.Configuration\Flow.Infrastructure.Configuration.csproj" />
       <ProjectReference Include="..\Flow.Infrastructure.IO.Contract\Flow.Infrastructure.IO.Contract.csproj" />
     </ItemGroup>
