--- a/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader.csproj
+++ b/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader/Flow.Plugins.Transactions.FlexibleTransactionsReader.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <EnableDynamicLoading>true</EnableDynamicLoading>
         <Version>1.0.0</Version>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
         <Authors>nvsnkv</Authors>
@@ -11,12 +12,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CsvHelper" Version="30.0.1" />
-      <PackageReference Include="Flow.Application.Transactions.Contract" Version="1.0.1" />
-      <PackageReference Include="Flow.Infrastructure.IO.Contract" Version="1.0.0" />
-      <PackageReference Include="Flow.Infrastructure.Plugins.Contract" Version="3.1.0" />
-      <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" />
-      <PackageReference Include="System.Linq.Async" Version="6.0.1" />
+      <PackageReference Include="CsvHelper" Version="30.0.1" ExcludeAssets="runtime"/>
+      <PackageReference Include="Flow.Application.Transactions.Contract" Version="1.0.1" ExcludeAssets="runtime"/>
+      <PackageReference Include="Flow.Infrastructure.IO.Contract" Version="1.1.0" ExcludeAssets="runtime" />
+      <PackageReference Include="Flow.Infrastructure.Plugins.Contract" Version="3.2.0" ExcludeAssets="runtime"/>
+      <PackageReference Include="JetBrains.Annotations" Version="2023.2.0" ExcludeAssets="runtime"/>
+      <PackageReference Include="System.Linq.Async" Version="6.0.1" ExcludeAssets="runtime"/>
     </ItemGroup>
 
 </Project>
