--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,13 @@ updates:
     schedule:
       interval: "weekly"
       day: "saturday"
+  - package-ecosystem: "nuget" # See documentation for possible values
+    directory: "/src/plugins/transactions/Flow.Plugins.Transactions.TKF" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      day: "saturday"
+  - package-ecosystem: "nuget" # See documentation for possible values
+    directory: "/src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader" # Location of package manifests
+    schedule:
+      interval: "weekly"
+      day: "saturday"
