--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build plugin dependencies
       shell: pwsh
       run: |
-        ./build/_scripts/flow.plugin-deps.ps1
+        ./flow.plugin-deps.ps1
       working-directory: ./build/_scripts
     - name: Build transfer detection plugin
       run: dotnet build
