--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,17 +26,37 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: ./src
+
+  plugins:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+      working-directory: ./src
     - name: Build plugin dependencies
       shell: pwsh
       run: |
         ./flow.plugin-deps.ps1
       working-directory: ./build/_scripts
-    - name: Build transfer detection plugin
-      run: dotnet build
+    - name: "[Transfer detection plugin] restore"
+      run: dotnet restore --configFile Nuget.config
       working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.TKF
-    - name: Build transactions reader plugin
-      run: dotnet build
+    - name: "[Transfer detection plugin] build"
+      run: dotnet build --no-restore
+      working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.TKF
+
+      name: "[Transactions reader plugin] restore"
+      run: dotnet restore --configFile Nuget.config
       working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader
-    - name: Test transactions reader plugin
+    - name: "[Transactions reader plugin] build"
+      run: dotnet build --no-restore
+      working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader
+    - name: "[Transactions reader plugin] test"
       run: dotnet test  --no-build --verbosity normal
       working-directory: ./src/plugins/transactions/Flow.Plugins.Transactions.FlexibleTransactionsReader
