feat: file reader for import

--- a/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
@@ -11,10 +11,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\l1\Flow.Application.Transactions\Flow.Application.Transactions.csproj" />
+      <ProjectReference Include="..\Flow.Infrastructure.IO\Flow.Infrastructure.IO.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="System.Text.Encoding" Version="4.3.0" />
     </ItemGroup>
 
 </Project>
