--- a/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
+++ b/src/l2/IO/Flow.Infrastructure.IO.Import/Flow.Infrastructure.IO.Import.csproj
@@ -7,6 +7,7 @@
         <Authors>nvsnkv</Authors>
         <Copyright>© 2023 nvsnkv </Copyright>
         <AssemblyVersion>1.0.0.0</AssemblyVersion>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
