--- a/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Host.Bundling.Cli/Flow.Hosts.Bundling.Cli.csproj
@@ -6,11 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow-bundle</AssemblyName>
-    <Version>5.0.0</Version>
-	  <AssemblyVersion>5.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
-	  <Copyright>© 2021 nvsnkv</Copyright>
+    <Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
+
+  <Import Project="..\Flow.Hosts.Common\version.props"/>
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\l2\Flow.Infrastructure.Plugins.Loader\Flow.Infrastructure.Plugins.Loader.csproj" />
