--- a/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Common/Flow.Hosts.Common.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>5.0.0</Version>
-	  <AssemblyVersion>5.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
+
+  <Import Project=".\version.props"/>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
