--- a/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.ExchangeRates.Cli/Flow.Hosts.ExchangeRates.Cli.csproj
@@ -6,11 +6,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>flow-rates</AssemblyName>
-    <Version>5.1.0</Version>
-	  <AssemblyVersion>5.0.0.0</AssemblyVersion>
     <Authors>nvsnkv</Authors>
 	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
+
+  <Import Project="..\Flow.Hosts.Common\version.props"/>
 
   <ItemGroup>
 	<None Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
