--- a/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transactions.Cli/Flow.Hosts.Transactions.Cli.csproj
@@ -5,13 +5,13 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	  <Version>5.1.0</Version>
-	  <AssemblyVersion>5.0.0.0</AssemblyVersion>
-	  <Authors>nvsnkv</Authors>
-	  <Copyright>© 2021 nvsnkv</Copyright>
+	<Authors>nvsnkv</Authors>
+	<Copyright>© 2021 nvsnkv</Copyright>
     <AssemblyName>flow-tx</AssemblyName>
   </PropertyGroup>
 
+  <Import Project="..\Flow.Hosts.Common\version.props"/>
+  
   <ItemGroup>
     <None Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
