--- a/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
+++ b/src/l3/CommandLine/Flow.Hosts.Transfers.Cli/Flow.Hosts.Transfers.Cli.csproj
@@ -12,6 +12,8 @@
 	<Copyright>© 2021 nvsnkv</Copyright>
   </PropertyGroup>
 
+  <Import Project="..\Flow.Hosts.Common\version.props"/>
+
   <ItemGroup>
 	<None Include="..\Flow.Hosts.Common\appsettings.Development.json" Link="appsettings.Development.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
