--- a/src/l1/Flow.Application.Analysis/Flow.Application.Analysis.csproj
+++ b/src/l1/Flow.Application.Analysis/Flow.Application.Analysis.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\Flow.Application.Transactions\Flow.Application.Transactions.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
